--- a/xCourse/xCourse/Views/Shared/_Layout.cshtml
+++ b/xCourse/xCourse/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <a asp-area="" asp-controller="Plan" asp-action="Index">Plan</a>
         </li>
         <li>
-            <a asp-area="" asp-controller="Home" asp-action="Compare">Compare</a>
+            <a asp-area="" asp-controller="Compare" asp-action="Index">Compare</a>
         </li>
         <li>
             <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -32,7 +32,7 @@
     </ul>
 
 
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
