- Flowchart is now generated from the database!
Finished seeding the database with CSC SD degree. Added flowchart generation from the database.

--- a/xCourse/xCourse/Views/Plan/Index.cshtml
+++ b/xCourse/xCourse/Views/Plan/Index.cshtml
@@ -184,7 +184,7 @@
 
 <h1 style="text-align:center;"> Plan your degree!</h1>
 
-<h2 style="text-align:center;"> @Model.Degree</h2>
+<h2 style="text-align:center;">@Model.Degree</h2>
 
 <body onload="init()">
     <br />
@@ -202,7 +202,7 @@
                             <a class="dropdown-item" href="#CE">Civil Engineering</a>
                             <a class="dropdown-item" href="#ChE">Chemical Engineering</a>
                             <a class="dropdown-item" href="#EEC">Computer Engineering</a>
-                            <a class="dropdown-item" href="#CSC-SD">Computer Science (Second Discipline)</a>
+                            <a class="dropdown-item" href="plan?CourseAbbrev=CSC SD">Computer Science (Second Discipline)</a>
                             <a class="dropdown-item" href="#CSC-CYB">Computer Science (Cybersecurity Concentration)</a>
                             <a class="dropdown-item" href="#CSC-DSA">Computer Science (Data Science & Analytics)</a>
                             <a class="dropdown-item" href="#CSC-SEG">Computer Science (Software Engineering)</a>
