--- a/xCourse/xCourse/Views/Compare/Index.cshtml
+++ b/xCourse/xCourse/Views/Compare/Index.cshtml
@@ -1,5 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model CompareModel 
 @{
 }
+
+<div class="card card-primary">
+    <div class="card-header">
+        Select the degree you want to compare to.
+    </div>
+    <div class="card-body">
+        <div style="padding: 10px">
+            @using (Html.BeginForm("Submit", "Compare", FormMethod.Post))
+            {
+                <div class="form">
+                    <div class="form-group">
+                        <label asp-for="DegreeName"></label>
+                    </div>
+                    <br/>
+                    @Html.DropDownListFor(m => m.CompareDegree, Model.DegreeName.Select(x => new SelectListItem(x, x)), "Select a Degree", new { @class = "selector form-control" })
+
+                </div>
+            }
+        </div>
+    </div>
+</div>
