--- a/xCourse/xCourse/Views/Shared/Flowchart.cshtml
+++ b/xCourse/xCourse/Views/Shared/Flowchart.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/gojs/release/go.js"></script>
 
@@ -179,4 +175,4 @@
     }
 </script>
 
-<div id="myDiagramDiv" style="width: 1200px; height: 800px; border: 1px solid black;"></div>
+<div id="myDiagramDiv" style="width: 1200px; height: 800px; border: 1px solid black; margin: 0 2px 0 0"></div>
