--- a/xCourse/xCourse/Views/Compare/Index.cshtml
+++ b/xCourse/xCourse/Views/Compare/Index.cshtml
@@ -1,26 +1,256 @@
-﻿@model CompareModel 
-@{
-}
+﻿@model CompareModel
 
 <div class="card card-primary">
     <div class="card-header">
-        Select the degree you want to compare to.
+        <h2 style="padding-left:3px;"><span class="tab1"></span>Select the degree you want to compare to.</h2>
     </div>
     <div class="card-body">
         <div style="padding: 10px">
-            @using (Html.BeginForm("Submit", "Compare", FormMethod.Post))
+            @using (Html.BeginForm("Index", "Compare", FormMethod.Post))
             {
-                <div class="form">
-                    <div class="form-group">
-                        <label asp-for="DegreeName"></label>
-                    </div>
-                    <br/>
-                    @Html.DropDownListFor(m => m.CompareDegree, Model.DegreeName.Select(x => new SelectListItem(x, x)), "Select a Degree", new { @class = "selector form-control" })
-
+            <div class="form">
+                <div class="form-group">
+                    <label asp-for="DegreeName">Degree Name:</label>
                 </div>
+                @Html.DropDownListFor(m => m.CompareDegree, Model.DegreeName.Select(x => new SelectListItem(x, x)), "Select a Degree", new { @class = "selector form-control" })
+                <br />
+                <input type="submit" value="Submit" />
+            </div>
             }
-<<<<<<< Updated upstream
-=======
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/gojs/release/go.js"></script>
+
+<script>
+
+// this controls whether the layout is horizontal and the layer bands are vertical, or vice-versa:
+var HORIZONTAL = true;  // this constant parameter can only be set here, not dynamically
+
+// Perform a LayeredDigraphLayout where commitLayers is overridden to modify the background Part whose key is "_BANDS".
+function BandedLDLayout() {
+    go.LayeredDigraphLayout.call(this);
+}
+go.Diagram.inherit(BandedLDLayout, go.LayeredDigraphLayout);
+
+
+BandedLDLayout.prototype.assignLayers = function () {
+    go.LayeredDigraphLayout.prototype.assignLayers.call(this);
+    var maxlayer = 7;
+    // now assign specific layers
+    var it = this.network.vertexes.iterator;
+    while (it.next()) {
+        var v = it.value;
+        if (v.node !== null) {
+            var lay = v.node.data.layer;
+            if (typeof lay === "number" && lay >= 0 && lay <= maxlayer) {
+                v.layer = lay;
+            }
+        }
+    }
+};
+
+
+BandedLDLayout.prototype.commitLayers = function (layerRects, offset) {
+    // update the background object holding the visual "bands"
+    var bands = this.diagram.findPartForKey("_BANDS");
+    if (bands) {
+        var model = this.diagram.model;
+        bands.location = this.arrangementOrigin.copy().add(offset);
+
+        // make each band visible or not, depending on whether there is a layer for it
+        for (var it = bands.elements; it.next();) {
+            var idx = it.key;
+            var elt = it.value;  // the item panel representing a band
+            elt.visible = idx < layerRects.length;
+        }
+
+        // set the bounds of each band via data binding of the "bounds" property
+        var arr = bands.data.itemArray;
+        for (var i = 0; i < layerRects.length; i++) {
+            var itemdata = arr[i];
+            if (itemdata) {
+                model.setDataProperty(itemdata, "bounds", layerRects[i]);
+            }
+        }
+    }
+};
+// end BandedLDLayout
+
+
+function init() {
+    var $ = go.GraphObject.make;
+
+    myDiagram = $(go.Diagram, "myDiagramDiv",
+        {
+            //allowDragOut: false,
+            initialAutoScale: go.Diagram.Uniform,
+            initialContentAlignment: go.Spot.Center,
+            layout: $(BandedLDLayout,
+                {
+                    direction: HORIZONTAL ? 0 : 90
+                })  // custom layout is defined above
+        });
+
+    myDiagram.nodeTemplate =
+        $(go.Node, "Auto",
+            $(go.Shape, "RoundedRectangle",
+                { fill: "white" }),
+            $(go.Panel, "Vertical",
+                new go.Binding("itemArray", "items"),
+                {
+                    itemTemplate:
+                        $(go.Panel, "Auto",
+                            { margin: 1 },
+                            $(go.TextBlock, new go.Binding("text", ""),
+                                { margin: 1 })
+                        )
+                }
+            )
+        );
+
+    myDiagram.nodeTemplateMap.add("Bands",
+        $(go.Part, "Position",
+            new go.Binding("itemArray"),
+            {
+                isLayoutPositioned: false,  // but still in document bounds
+                locationSpot: new go.Spot(0, 0, HORIZONTAL ? 0 : 16, HORIZONTAL ? 16 : 0),  // account for header height
+                layerName: "Background",
+                pickable: false,
+                selectable: false,
+                itemTemplate:
+                    $(go.Panel, HORIZONTAL ? "Vertical" : "Horizontal",
+                        new go.Binding("position", "bounds", function (b) { return b.position; }),
+                        $(go.TextBlock,
+                            {
+                                angle: HORIZONTAL ? 0 : 270,
+                                textAlign: "center",
+                                wrap: go.TextBlock.None,
+                                font: "bold 11pt sans-serif",
+                                background: $(go.Brush, "Linear", { 0: "white", 1: go.Brush.darken("white") })
+                            },
+                            new go.Binding("text"),
+                            // always bind "width" because the angle does the rotation
+                            new go.Binding("width", "bounds", function (r) { return HORIZONTAL ? r.width : r.height; })
+                        ),
+                        $(go.Shape,
+                            { stroke: null, strokeWidth: 0 },
+                            new go.Binding("desiredSize", "bounds", function (r) { return r.size; }),
+                            new go.Binding("fill", "itemIndex", function (i) { return i % 2 == 0 ? "whitesmoke" : go.Brush.darken("whitesmoke"); }).ofObject())
+                    )
+            }
+        ));
+
+    myDiagram.linkTemplate =
+        $(go.Link,
+            $(go.Shape));  // simple black line, no arrowhead needed
+
+    // define the tree node data
+    var nodeDataArray = [
+        { // this is the information needed for the headers of the bands
+            key: "_BANDS",
+            category: "Bands",
+            itemArray: [
+                { text: "Fall 1" },
+                { text: "Spring 2" },
+                { text: "Fall 3" },
+                { text: "Spring 4" },
+                { text: "Fall 5" },
+                { text: "Spring 6" },
+                { text: "Fall 7" },
+                { text: "Spring 8" }
+            ]
+        },
+            @Html.Raw(@Model.FirstDegreeNodes)
+            ];
+
+
+
+    var linkDataArray = [ @Html.Raw(@Model.FirstDegreeLinks) ];
+
+    myDiagram.model = new go.GraphLinksModel([
+        { // this is the information needed for the headers of the bands
+            key: "_BANDS",
+            category: "Bands",
+            itemArray: [
+                { text: "Fall 1" },
+                { text: "Spring 2" },
+                { text: "Fall 3" },
+                { text: "Spring 4" },
+                { text: "Fall 5" },
+                { text: "Spring 6" },
+                { text: "Fall 7" },
+                { text: "Spring 8" }
+            ]
+        },
+            @Html.Raw(@Model.FirstDegreeNodes)
+            ],
+    [ @Html.Raw(@Model.FirstDegreeLinks) ]
+            );
+
+    myDiagram2 = $(go.Diagram, "myDiagramDiv2",
+        {
+            //allowDragOut: false,
+            initialAutoScale: go.Diagram.Uniform,
+            initialContentAlignment: go.Spot.Center,
+            layout: $(BandedLDLayout,
+                {
+                    direction: HORIZONTAL ? 0 : 90
+                }),
+            "undoManager.isEnabled": true
+        }
+    );
+    myDiagram2.nodeTemplate =
+        $(go.Node, "Auto",
+            $(go.Shape, "RoundedRectangle",
+                { fill: "white" }),
+            $(go.Panel, "Vertical",
+                new go.Binding("itemArray", "items"),
+                {
+                    itemTemplate:
+                        $(go.Panel, "Auto",
+                            { margin: 1 },
+                            $(go.TextBlock, new go.Binding("text", ""),
+                                { margin: 1 })
+
+                        )
+
+                }
+
+            )
+        );
+
+    myDiagram2.nodeTemplateMap.add("Bands",
+        $(go.Part, "Position",
+            new go.Binding("itemArray"),
+            {
+                isLayoutPositioned: false,  // but still in document bounds
+                locationSpot: new go.Spot(0, 0, HORIZONTAL ? 0 : 16, HORIZONTAL ? 16 : 0),  // account for header height
+                layerName: "Background",
+                pickable: false,
+                selectable: false,
+                itemTemplate:
+                    $(go.Panel, HORIZONTAL ? "Vertical" : "Horizontal",
+                        new go.Binding("position", "bounds", function (b) { return b.position; }),
+                        $(go.TextBlock,
+                            {
+                                angle: HORIZONTAL ? 0 : 270,
+                                textAlign: "center",
+                                wrap: go.TextBlock.None,
+                                font: "bold 11pt sans-serif",
+                                background: $(go.Brush, "Linear", { 0: "white", 1: go.Brush.darken("white") })
+                            },
+                            new go.Binding("text"),
+                            // always bind "width" because the angle does the rotation
+                            new go.Binding("width", "bounds", function (r) { return HORIZONTAL ? r.width : r.height; })
+                        ),
+                        $(go.Shape,
+                            { stroke: null, strokeWidth: 0 },
+                            new go.Binding("desiredSize", "bounds", function (r) { return r.size; }),
+                            new go.Binding("fill", "itemIndex", function (i) { return i % 2 == 0 ? "whitesmoke" : go.Brush.darken("whitesmoke"); }).ofObject())
+                    )
+            }
         ));
     myDiagram2.linkTemplate =
         $(go.Link,
@@ -77,7 +307,6 @@
         </div>
         <div class="col-6">
             <div id="myDiagramDiv2" style="width: 100%; height: 800px; border: 1px solid black; margin: 0 2px 0 0"></div>
->>>>>>> Stashed changes
         </div>
     </div>
-</div>
+</body>
