--- a/xCourse/xCourse/Views/Plan/Index.cshtml
+++ b/xCourse/xCourse/Views/Plan/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@model PlanModel
-@{
-    ViewData["Title"] = "Plan | xCourse";
-}
+@{ ViewData["Title"] = "Plan | xCourse"; }
 
 <head>
-    
+
 </head>
 
 
@@ -168,7 +166,7 @@
     myDiagram.nodeTemplate =
     $(go.Node, "Auto",
         $(go.Shape, "RoundedRectangle",
-        { fill: "white" }),
+        new go.Binding("fill", "color")),
         $(go.Panel, "Vertical",
         new go.Binding("itemArray", "items"),
         {
@@ -177,12 +175,8 @@
                 { margin: 1 },
             $(go.TextBlock, new go.Binding("text", ""),
                 { margin: 1 })
-
             )
-
-        }
-
-        )
+        })
     );
 
     myDiagram.nodeTemplateMap.add("Bands",
@@ -251,5 +245,5 @@
             <div id="myDiagramDiv" style="width: 1200px; height: 800px; border: 1px solid black; margin: 0 2px 0 0"></div>
         </div>
     </div>
-    
+
 </body>
