--- a/xCourse/xCourse/Views/Home/Index.cshtml
+++ b/xCourse/xCourse/Views/Home/Index.cshtml
@@ -2,8 +2,21 @@
     ViewData["Title"] = "xCourse";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to xCourse</h1>
-    <h4> You're guide to making degree planning, scheduling, and tracking easier.</h4>
+<head>
+    <style>
+        body {
+            background-image: url("favicon.ico");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 300px;
+        }
+    </style>
+</head>
 
-</div>
+<body>
+    <div class="text-center">
+        <h1 class="display-4">Welcome to xCourse</h1>
+        <h4> You're guide to making degree planning, scheduling, and tracking easier.</h4>
+
+    </div>
+</body>
