--- a/xCourse/xCourse/Views/Home/Privacy.cshtml
+++ b/xCourse/xCourse/Views/Home/Privacy.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+
+
+    <h1>@ViewData["Title"]</h1>
+
+    <p>This is not assoicated with LSU in any way. We do not collect any data.</p>
+    <p>This concept is brought to you by Seth Richard, Ferris DeHart, and Nick Settoon. </p>
