--- a/xCourse/xCourse/Views/Plan/Index.cshtml
+++ b/xCourse/xCourse/Views/Plan/Index.cshtml
@@ -36,7 +36,7 @@
                             <a class="dropdown-item" href="#CM-IEA">Construction Management - Industry Emphasis Area</a>
                             <a class="dropdown-item" href="plan?CourseAbbrev=EE">Electrical Enginerring</a>
                             <a class="dropdown-item" href="#EVEG">Environmental Engineering</a>
-                            <a class="dropdown-item" href="#IE">Industrial Engineering</a>
+                            <a class="dropdown-item" href="plan?CourseAbbrev=IE">Industrial Engineering</a>
                             <a class="dropdown-item" href="#ME">Mechanical Engineering</a>
                             <a class="dropdown-item" href="#PETE">Petroleum Engineering</a>
                         </div>
