--- a/xCourse/xCourse/Views/Shared/_Layout.cshtml
+++ b/xCourse/xCourse/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
             <a asp-area="" asp-controller="Compare" asp-action="Index">Compare</a>
         </li>
         <li>
-            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
         </li>
     </ul>
 
@@ -40,7 +40,7 @@
 
     <footer class="border-top footer text-muted" id="lsu_footer">
         <div class="container">
-            &copy; 2020 - xCourse - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - xCourse - <a asp-area="" asp-controller="Home" asp-action="Privacy">About</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
