Reorder of names
reorder the names on about

--- a/xCourse/xCourse/Views/Home/Privacy.cshtml
+++ b/xCourse/xCourse/Views/Home/Privacy.cshtml
@@ -8,4 +8,4 @@
     <h1>@ViewData["Title"]</h1>
 
     <p>This is not assoicated with LSU in any way. We do not collect any data.</p>
-    <p>This concept is brought to you by Seth Richard, Ferris DeHart, and Nick Settoon. </p>
+    <p>This concept is brought to you by Ferris DeHart, Seth Richard, and Nick Settoon. </p>
